added create quiz button and add question button

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -35,6 +35,15 @@ div {
   }
 }
 
+.main-content, .status, h2 {
+  width: 200px;
+  margin: auto;
+}
+
+.main-content {
+  margin-top: 100px;
+}
+
 #notice {
   color: green;
 }
