commit before starting to split up js code into mvc format

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -54,6 +54,7 @@
     <option value='boolean'>True/False</option>
     <option value='blank'>Free Response</option>
   </select>
+  <div class='form'></div>
 </script>
 
 <script type='text/template' class='score-template'>
