--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -35,12 +35,12 @@ div {
   }
 }
 
-.main-content, .status, h2 {
+.menu, .status, h2 {
   width: 200px;
   margin: auto;
 }
 
-.main-content {
+.menu {
   margin-top: 100px;
 }
 
