--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,12 @@
 <h2>Quizzy Quiz</h2>
 
-<div class='main-content' data-score=0></div>
+<div class='menu' data-score=0></div>
+<div class='quiz' data-score=0></div>
 <div class='status'></div>
 
 <script type='text/template' class='quiz-menu-template'>
   <div class='menu'>
+
     <h3>Quizzes</h3>
     <ol>
       <%% for(var i = 0; i < data.length; i++){ %>
